# PCSharer

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
scripts/: build-release.ps1  verify-version.ps1
src/: App.tsx  format.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
