[package]
name = "pc-sharer"
version = "0.2.0"
description = "LAN file sharing desktop app"
authors = ["Crainax"]
edition = "2021"

[lib]
name = "pc_sharer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
arboard = "3"
image = { version = "0.25", default-features = false, features = ["png"] }
